					  And revive with 1 HP / 1 SP at the place of your death.
				[Komurka] From where this info is? ... Mine: On your death you'll loose this ring and get 50% HP.
				[Poki#3]  Theres no official desc! <.< Although you might wanna make it a custom item or something...
	1308 Golden Axe:		NEED INFO
	1475 Equestrian's Spear:	NEED INFO.
	13005 Angelic Wing Dagger:	NEED INFO.
=======================
2010/12/30
	* Rev. 14643 Updated mapcache up to 2010-12-01. Adds Bifrost, Dewata and Malangdo maps. [Ai4rei]
	* Rev. 14641 Bug fixes. Not much else. :3
	- Lowered the required level to equip Expert Ring from 90 to 50. (bugreport:2853)
	- Changed equip location for Odin mask, and made it non-refinable. (bugreport:4221)
	- Changed the weight of the Atroce Blade from 200 to 350. (bugreport:4405)
	- Added Tatacho Card to Tatacho's drops. (bugreport:4469)
	- Changed Crunch Toast generated by the F_Toast_Box. (Bugreport:4610)
	- Corrected typo with Dagger of Hunter, casts Bash level 10 at 10% chance (bugreport:4667)
	- Corrected Veteran Hammer, now uses bHealPower instead of bSkillheal. (bugreport:4670)
2010/12/16
	* Rev. 14596 Added missing pet db documentation for fields 'attack_rate', 'defence_attack_rate', 'change_target_rate', 'pet_script' and 'loyal_script' based on the one provided by frenzmu06 (bugreport:4636, follow up to r13752). [Ai4rei]
2010/12/13
	* Rev. 14590 Added pet_db2.txt to make it apparent, that pet db has support for customs as well. [Ai4rei]
	- Fixed typo 'HungeyDelay' into 'HungryDelay' in pet database description (bugreport:4636, since r13752).
2010/12/05
	* Rev. 14559 Updated some items to use bonus bAddItemHealRate, and healpower2. [L0ne_W0lf]
2010/12/02
	* Rev. 14555 Corrected incorrect bonuses relating to bAddMonsterDropItem/Group. (burgerport:4569) [L0ne_W0lf]
	* Updated the IG_Ore, IG_Food, IG_Recovery and IG_Jewel item groups to official items/rates.
	- As a result bAddMonsterDropItemGroup now uses the highest rate in group as it's base rate.